// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@ast-decorators/utils createPropertyByPrivacy creates property when compiles with hard privacy option 1`] = `
"\\"use strict\\";

class Foo {
  #_bar = \\"baz\\";
  bar;
}"
`;

exports[`@ast-decorators/utils createPropertyByPrivacy creates property when compiles with none privacy option 1`] = `
"\\"use strict\\";

class Foo {
  _bar = \\"baz\\";
  bar;
}"
`;

exports[`@ast-decorators/utils createPropertyByPrivacy creates property when compiles with soft privacy option 1`] = `
"\\"use strict\\";

const _bar = Symbol();

class Foo {
  [_bar] = \\"baz\\";
  bar;
}"
`;
